app/styles/_site-chrome.scss
@import 'mixins/_layout';
@import 'mixins/_transitions';

#site-chrome {
  position: relative;
  /* So the side nav will position correctly */
}

/* Hide certain elements based on window size. This must be done in css
since the media service doesn't work in FastBoot, as it needs to access 
the DOM */
.sitechrome-search, .sitechrome-corner, .sitechrome__listen-desktop, .sitechrome__nav-footer {
  display: none;
  @include mq($large-and-up) {
    display: inline;
  }
}

.sitechrome-logo, .sitechrome__listen-mobile, .sitechrome-search__mobile {
  @include mq($large-and-up) {
    display: none !important;
  }
}


.sitechrome-corner {

  > h1 {
    margin: 0;
    padding: 0;

    > a:hover {
      opacity: 1;
    }
  }
}

.sitechrome-top {
  padding-top: 20px;
  @extend %vertical-rhythm;
  background: $wqxrblue;

  @include mq($up-to-large) {
    margin-bottom: 0;
  }

  @include mq($large-and-up) {
    background: white;
    padding-top: 0;
    height: 83px;
  }

  .missing &,
  .profile & {
    margin-bottom: 0;
  }
}

.sitechrome-topright {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  @include mq($small-only) {
    justify-content: flex-end;
    flex-wrap: wrap;
  }
  > a,
  > div {
    justify-content: center;
    align-self: center;
    height: 100%;
    margin-right: 10px;
    white-space: nowrap;

    @include mq($small-only) {
      margin-right: 5px;
    }
  }
}

.sitechrome-nav {
  background-color: $wqxrblue;
  transition: all 50ms ease;
  //for mobile header snap
  width: 100%;
  position: sticky;
  top: 0;
  z-index: $zIndex--fixedNav;
  margin-bottom: 24px;

  .new {
    color: $gold;
  }

  ul.alignright {
    border-color: $wqxrblue;
  }

  a,
  button {
    color: white;
    font-family: 'Lato', 'Open Sans', sans-serif;
    font-size: 18px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: 1.4;
    }

  a {
    padding-bottom: 13px;

    @include mq($medium-only) {
      font-weight: 600;
    }


  }

  a:hover,
  button:hover,
  a:focus,
  button:focus {
    opacity: 0.8;
    color: white;
    text-decoration: none;
  }

  &.mobile-x-scrollable {
    @include mq($up-to-large) {
      @include x-scrollable;
    }

    a, button {
      @include mq($up-to-large) {
        font-family: 'Open Sans', sans-serif;
        font-size: 14px;
        font-weight: 600;
        line-height: 1.4;
      }
    }
    .list-item {
      @include mq($large-and-up) {
        padding: 7px 18px 6px 0;
        margin: 3px 0;
      }
      a {
        @include mq($large-and-up) {
          transition: none;
        }
      }
    }
    .list--noborder {
      > .list-heading {
        @include mq($large-and-up) {
          //@extend %vertical-rhythm;
        }
      }
    }
    .list-item.active, .list-item.ember-transitioning-in {
      @include mq($large-and-up) {
        border-right: 3px solid white;
        background-color: rgba($wqxrdarkblue, .15);
      }
      a {
        @include mq($large-and-up) {
          border: none;
        }
      }
    }
    .list-item.active.ember-transitioning-out {
      @include mq($large-and-up) {
        border-right: 0;
        background-color: inherit;
      }
      a {
        @include mq($large-and-up) {
          color: white;
          border: none;
        }
      }
    }
  }

  h1 {
    a,
    a:hover {
      padding: 29px 17px 29px 19px;
    }

    a:focus {
      opacity: 1;
    }
  }

  .list-item > a {
    border-bottom-color: $blue;
  }

  .list-item.active a {
    opacity: 1;

    @include mq($medium-only) {
      border-bottom: 4px solid white;
    }
  }

  .listen-button {
    .listen-ui {
      width: auto;
    }
  }

  @include mq($large-and-up) {
    position: absolute;
    width: 150px;
    left: 0;
    top: 0;
    bottom: 0;

    &.mod-sticky {
      padding-bottom: 117px;
      position: fixed;
      left: 0;
      height: 100%;
      bottom: 0;
    }

    a {
      padding-bottom: 0;
    }

  }

  .list-item:last-child {
      @include mq($small-only) {
        margin-right: 75px !important;
      }
  }

  .stream-launcher {
    width: 100%;
    text-align: right;

    .listen-ui {
      width: 24px;
      height: 24px;
    }
    .listen-spinner {
      /* Alignment hacks. */
      transform: scale(0.75) translateX(-11px) translateY(-3px);
      width: 40px;
      height: 20px;
    }

    span {
      display: inline-block;
      margin-left: 4px;
    }
  }

  //override legacy alignright style from screen.css
  ul.alignright {
    margin: 0;
    float: none;
    border-right: none;
  }

  &.nav--homepage {
    background-color: $wqxrblue;

    @include mq($large-and-up) {
      a,
      button,
      a:focus,
      button:focus,
      a:hover,
      button:hover {
        color: white;
        font-weight: 600;
      }

      ul.alignright {
        border-color: $wqxrblue;
      }
    }
  }
}

.profile .sitechrome-nav {
  margin-bottom: 0;
}

.sitechrome-topbody {
  display: flex;
  flex-wrap: wrap;

  @include mq($large-and-up) {
    height: 100%;
  }

  @include mq($medium-and-up) {
    flex-wrap: nowrap;
  }
}

.sitechrome-topbody-left {
  flex-basis: 100%;
  order: 2;
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 5px 15px;
  padding: 5px rems(15);

  border-top: 1px solid rgba(white, 0.23);

  @include mq($large-and-up) {
    border: none;
  }

  @include mq($medium-and-up) {
    flex: 1 0 300px;
    justify-content: space-around;
    order: 0;
    padding: 0;
    margin-left: 15px;
  }

  > .btn {
    @include mq($small-only) {
      @include fontsize(11);
    }
  }

  > .btn:after {
    @include mq($medium-and-up) {
      content: '|';
      margin-left: 10px;
      opacity: 0.25;
    }
  }

  > .btn:last-child:after {
    content: none;
  }
}

.sitechrome-topbody-right {
  display: flex;
  justify-content: space-between;
  align-items: center;

  order: 1;
  flex-basis: 100%;

  margin-bottom: 15px;
  padding: 0 15px 0 24px;

  @include mq($large-and-up) {
    margin-bottom: 0;
  }

  @include mq($medium-and-up) {
    flex: 1 1 auto;
    order: 0;

    .cta-text {
      padding: 0 15px;
      display: inline-block;
    }
  }

  > .btn {
  }

  h1 {
    margin: 0;
  }

  .sitechrome-search {
    width: 320px;
  }
}

.sitechrome-list {
  @extend .list;
  @extend .list--noborder;
  margin: 0;
  padding: 0;
  list-style: none;
}



// .btn.btn--large.btn--white
.sitechrome-btn {
  display: inline-block;
  border-radius: 25px;
  color: $wqxrblue;
  border: none;
  padding: 2px 18px 2px 18px;
  background: white;
  white-space: nowrap;
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 30px;

  cursor: pointer;

  &:hover,
  &:focus {
    background: rgba(white, 0.8);
    text-decoration: none;
  }

  transition: background-color $transition-timing, color $transition-timing;

  flex-shrink: 0;

  @include mq($large-and-up) {
    background: $wqxrdarkblue;
    color: white;
    line-height: 36px;

    &:hover,
    &:focus {
      color: white;
      background: rgba($wqxrdarkblue, 0.8);
    }
  }


}

.mod-sticky .sitechrome__nav-footer {
  @include l-bottom;
}


.sitechrome__nav-footer {
  position: fixed;
  bottom: 0;
  width: 150px;
  left: 0;
  @include player-reveal-transition;
  @include player-reveal-transition--closed;
}

.sitechrome--player-open .sitechrome__nav-footer {
  @include player-reveal-transition--open;
}

.sitechrome-page-content-area {
  position: relative;
  margin-bottom: 2.4rem;

  .profile & {
    margin-bottom: 0;
    padding-top: 25px;
    background-color: $nearwhite;
  }

  .missing & {
    margin-bottom:  0;
  }
}

.sitechrome-footer {
  background-color: $black;

  .footer-logo {
    padding-bottom: 9px;
  }

  .text-body{
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 14px;
  }

  h2 {
    color: white;
    font-family: 'Lato', 'Open Sans', sans-serif;
    font-size: 18px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    margin-bottom: 14px;

    @include mq($medium-and-up) {
      font-size: 24px;
      line-height: 1.4;
    }

    &.inline {
      padding-right: 25px;
      display: inline-block;
    }
  }

  .list--inline {
    line-height: 50px;
    h2, li {
      vertical-align: middle;
    }
    h2.inline {
      padding-right: 25px;
      display: inline-block;
      margin-bottom: 6px;
    }
  }

  .list-item--tiny {
    padding: 5px 0;
  }


  a {
    font-family: 'Open Sans', sans-serif;
    font-size: 12px;
    font-weight: 600;
    color: white;
    line-height: normal;
    border-bottom: none;

    @include mq($medium-and-up) {
      font-size: 14px;
      line-height: 1.5;
    }

    &:hover,
    &:focus {
      color: rgba(white, 0.8);
      text-decoration: none;
      border-bottom: none;
    }
  }

}

.network-stripe {
  svg {
    fill: white;
  }

  > .greene > svg {
    .bump {
      fill: white;
    }
    .bars {
      fill: #C0C0C0;
    }
  }
}

